--- a/hiking_club_frontend/src/styles/Homescreen.css
+++ b/hiking_club_frontend/src/styles/Homescreen.css
@@ -2,7 +2,7 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
+    background-color: #e8e5d9;
   }
   
   /* Navbar */
@@ -110,7 +110,7 @@ body {
 
 /* Background Image */
 .Homescreen {
-  background-image: url("../assets/images/background.jpeg");  /* ✅ Use background image */
+  background-image: url("../assets/images/background.png");  /* ✅ Use background image */
   background-size: cover;   /* ✅ Ensure full coverage */
   background-position: center;
 }
