--- a/hiking_club_frontend/src/styles/EditArticles.css
+++ b/hiking_club_frontend/src/styles/EditArticles.css
@@ -51,16 +51,17 @@
   
   .image-preview img {
     margin: 5px;
-    border-radius: 4px;
+    border-radius: 10px;
   }
   
-  .form-buttons {
+  .article-form .form-buttons {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
+    gap: 10px;
     margin-top: 20px;
   }
   
-  .form-buttons button {
+  .article-form .form-buttons button {
     padding: 10px 20px;
     background-color: #00796b;
     color: white;
@@ -77,6 +78,39 @@
   .form-buttons .delete:hover {
     background-color: red;
   }
+
+  .form-group input{
+    color: black;
+  }
+
+
+  .image-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+
+  .image-container img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+  }
+
+  .image-container button {
+    margin-left: 5px;
+    padding: 5px 10px;
+    background-color: #00796b;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    border-radius: 100px;
+  }
+
+  .image-container button:hover {
+    background-color: red;
+  }
   
 
   .comments-section{
@@ -86,6 +120,7 @@
     border: 1px solid #ccc;
     border-radius: 8px;
     background-color: #f9f9f9;
+    color: black;
   }
   .comment {
     margin-top: 5px;
