--- a/hiking_club_frontend/src/styles/MemberDetails.css
+++ b/hiking_club_frontend/src/styles/MemberDetails.css
@@ -10,6 +10,11 @@
     
   }
 
+  .member-form h2 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
   .member-form button {
     background-color: #00796b;
     color: white;
