--- a/hiking_club_frontend/src/styles/AddArticle.css
+++ b/hiking_club_frontend/src/styles/AddArticle.css
@@ -40,11 +40,19 @@
     resize: vertical;
     height: 150px;
   }
-  
+
+  .form-group textarea:focus {
+    outline: none;
+    border-color: #00796b;
+  }
+  .form-group input:focus {
+    outline: none;
+    border-color: #00796b;
+  }
   .form-group input[type="file"] {
     padding: 0;
   }
-  
+
   .image-preview {
     display: flex;
     flex-wrap: wrap;
@@ -62,30 +70,33 @@
     margin-top: 20px;
   }
   
-  .form-buttons button {
+  .form-buttons button[type="save-button"] {
     padding: 10px 20px;
     background-color: #00796b;
     color: white;
     border: none;
-    border-radius: 4px;
     cursor: pointer;
-    border-radius: 100px;
+    border-radius: 10px;
+  }
+
+  .article-form button[type="back-button"] {
+    padding: 10px 20px;
+    background-color: #ccc;
+    color: black;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
   }
   
-  .form-buttons button:hover {
+  .form-buttons button[type="save-button"]:hover {
     background-color: #005249;
   }
 
-  .pagination input{
-    border-radius: 100px;
-    padding: 10px 30px;
-    border: 1px solid black;
-    color: black;
+  .form-buttons button[type="back-button"]:hover {
+    background-color: #999;
   }
-  .pagination span{
-    margin-top: 5px;
-    color: black;
-  }
+
+ 
 
 
   
