--- a/hiking_club_frontend/src/styles/DashboardComponent.css
+++ b/hiking_club_frontend/src/styles/DashboardComponent.css
@@ -33,8 +33,8 @@
 
 
 .members-header input {
-    padding: 10px;
+    padding: 10px 30px;
     border: 1px solid #ccc;
-    border-radius: 100px;
+    border-radius: 5px;
     font-size: small;
 }
