--- a/hiking_club_frontend/src/styles/AboutUs.css
+++ b/hiking_club_frontend/src/styles/AboutUs.css
@@ -1,6 +1,6 @@
 .about-us {
   text-align: center;
-  padding-top: 100px;
+  padding-top: 120px;
   background-color: aliceblue;
 }
 
@@ -8,12 +8,14 @@
   padding: 0 50px;
   text-align: justify;
   color: #555;
+  padding-top: 30px;
 }
 
 .committee-section {
   margin-bottom: 60px;
   opacity: 0;
   transition: opacity 1s ease-in-out;
+  padding-top: 30px;
 }
 
 [data-aos="fade-up"] {
@@ -26,6 +28,8 @@
   flex-wrap: wrap;
   gap: 40px;
   margin-bottom: 20px;
+  padding-top: 20px;
+  gap: 100px;
 }
 
 .committee-member {
@@ -33,6 +37,7 @@
   flex-direction: column;
   align-items: center;
   width: 140px;
+  
 }
 
 .member-photo {
@@ -42,6 +47,7 @@
   object-fit: cover;
   border: 3px solid #45ac32;
   transition: transform 0.3s ease-in-out;
+  row-gap: 100x;
 }
 
 .committee-member:hover .member-photo {
@@ -52,4 +58,6 @@
   font-size: 1rem;
   color: #2c3e50;
   text-align: center;
+  white-space: nowrap; /* Ensures the name stays on one line */
+  text-align: center; /* Optional: Centers the text */
 }
