--- a/hiking_club_frontend/src/styles/Homescreen.css
+++ b/hiking_club_frontend/src/styles/Homescreen.css
@@ -125,3 +125,36 @@ body {
     font-size: 18px;
   }
 }
+
+.mhc-handbook {
+  text-align: center;
+  padding: 40px;
+  background-color: #f4f4f4;
+}
+
+.handbook-title {
+  font-size: 2rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.handbook-description {
+  font-size: 1.2rem;
+  margin-bottom: 20px;
+  color: #555;
+}
+
+.handbook-button {
+  padding: 10px 20px;
+  font-size: 1rem;
+  background-color: #073b32;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: 0.3s;
+}
+
+.handbook-button:hover {
+  background-color: #0056b3;
+}
