--- a/hiking_club_frontend/src/styles/AdminEvents.css
+++ b/hiking_club_frontend/src/styles/AdminEvents.css
@@ -10,7 +10,7 @@
     background: white;
 }
   
-.events-content{
+.events-container{
     width: 100%;
     margin-top: 150px; 
     margin-left: 250px; 
@@ -24,7 +24,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     margin-top: 20px;
 }
 
@@ -94,4 +94,13 @@ table{
     border-radius: 100px;
     padding: 10px 30px;
     border: 1px solid black;
+}
+
+@media(max-width: 768px){
+    .events-container{
+        margin-left: 0px;
+        margin-top: 170px;
+    }
+    
+    
 }
