--- a/hiking_club_frontend/src/styles/Profile.css
+++ b/hiking_club_frontend/src/styles/Profile.css
@@ -26,7 +26,7 @@
   margin-bottom: 10px;
   text-transform: uppercase;
   letter-spacing: 3px;
-  border-bottom: 3px solid #56c1a5;
+  border-bottom: 3px solid #073b32;
   padding-bottom: 10px;
 }
 
@@ -63,7 +63,7 @@
   background-color: #f1f1f1;
   margin-bottom: 15px;
   position: relative;
-  border: 3px solid #56c1a5;
+  border: 3px solid #073b32;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
 }
 
@@ -90,7 +90,7 @@
   width: 100%;
   max-width: 280px;
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
-  border-left: 5px solid #56c1a5;
+  border-left: 5px solid #073b32;
 }
 
 /* Hidden File Input */
@@ -104,7 +104,7 @@
   margin-top: 15px;
   padding: 12px 25px;
   font-size: 16px;
-  background-color: #56c1a5;
+  background-color: #073b32;
   color: white;
   border-radius: 30px;
   cursor: pointer;
@@ -143,7 +143,7 @@
 }
 
 .editable-input:focus {
-  border: 1px solid #56c1a5;
+  border: 1px solid #42AC3;
   background-color: #fff;
   box-shadow: 0 4px 10px rgba(86, 193, 165, 0.3);
 }
@@ -159,7 +159,7 @@
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
   font-size: 16px;
   margin-top: 30px;
-  border-left: 5px solid #56c1a5;
+  border-left: 5px solid #073b32;
 }
 
 /* Divider */
@@ -214,12 +214,12 @@
 }
 
 .modal-body::-webkit-scrollbar-thumb {
-  background: #56c1a5;
+  background: #073b32;
   border-radius: 10px;
 }
 
 .modal-body::-webkit-scrollbar-thumb:hover {
-  background: #38a3a5;
+  background: #073b32;
 }
 
 /* Modal Input Styles */
@@ -245,7 +245,7 @@
 .save-button {
   display: block;
   width: 100%;
-  background-color: #56c1a5;
+  background-color:#073b32;
   color: white;
   padding: 12px;
   font-size: 16px;
@@ -257,7 +257,7 @@
 }
 
 .save-button:hover {
-  background-color: #38a3a5;
+  background-color:  ;
   transform: translateY(-5px);
 }
 
