--- a/hiking_club_frontend/src/styles/AdminApplicants.css
+++ b/hiking_club_frontend/src/styles/AdminApplicants.css
@@ -11,12 +11,13 @@
 
   
 .applicants-content{
-    padding-left:250px;
+    padding-left:270px;
     padding-top: 170px;
     width: 100%;
     min-height: 100vh;
     color: white; 
     overflow-y: auto;
+    padding-bottom: 20px;
   }
 
 
