--- a/hiking_club_frontend/src/styles/AdminKnowledge.css
+++ b/hiking_club_frontend/src/styles/AdminKnowledge.css
@@ -41,11 +41,6 @@
     background-color: black;
 }
 
-.search-container .search-input{
-    border-radius: 100px;
-    padding: 10px 30px;
-    border: 1px solid black;
-}
 
 .knowledge-header{
     margin-top: 10px;
@@ -63,6 +58,7 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    margin-bottom: 10px;
 }
 
 .knowledge-header button:hover{
@@ -74,6 +70,7 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: small;
+    margin-top: 10px;
 }
 
 .knowledge-header .search-bar{
